# app

./: .babelrc  .eslintignore  .eslintrc  .eslintrc.cjs  .gitignore  .prettierrc  156.bundle.js  156.bundle.js.map  353.bundle.js  353.bundle.js.map  Cargo.toml  LICENSE  README.md  app.js  bundle-report.html  bundle.js  bundle.js.LICENSE.txt  bundle.js.map  clippy.toml  index.html  main.css  main.css.map  package.json  rust-toolchain  stats.json  svelte.config.js  tsconfig.json  webpack.config.js  webpack.dev.js  webpack.development.js  webpack.prod.js  webpack.production.js
.github/workflows/: publish.yml  test.yml
api/: build.js  package.json  wrangler.toml
api/src/: course.ts  index.ts  main.ts
api/wasm/: Cargo.toml
api/wasm/src/: lib.rs
api/worker/: buffer.js  build.mjs  package.json  wrangler.toml
api/worker/src/: auth.ts  course.ts  global.d.ts  helpers.ts  index.ts  main.ts  requests.ts  session.ts  user.ts
api/worker/src/wasm/: shrm_api_wasm.d.ts  shrm_api_wasm.js  shrm_api_wasm_bg.wasm  shrm_api_wasm_bg.wasm.d.ts
app/: .eslintrc.cjs  .gitignore  package.json  svelte.config.js  webpack.config.js  webpack.development.js  webpack.production.js
app/src/: App.svelte  global.d.ts  index.d.ts  main.js
app/src-wasm/app/: Cargo.toml  package.json
app/src-wasm/app-assets/: Cargo.toml
app/src-wasm/app-assets/src/: lib.rs
app/src-wasm/app-config/: Cargo.toml
app/src-wasm/app-core/: Cargo.toml
app/src-wasm/app-core/src/: course.rs  drag.rs  game_mode.rs  lib.rs  player_sprites.rs  tile.rs
app/src-wasm/app-core/src/course/: goal_pole.rs  resource.rs  sprites.rs  tile.rs
app/src-wasm/app-course/: Cargo.toml
app/src-wasm/app-course/src/: grid.rs  lib.rs
app/src-wasm/app-game/: Cargo.toml
app/src-wasm/app-game/src/: game_mode.rs  lib.rs
app/src-wasm/app-load/: Cargo.toml
app/src-wasm/app-load/src/: lib.rs
app/src-wasm/app-menu/: Cargo.toml
app/src-wasm/app-menu/src/: game.rs  lib.rs
app/src-wasm/app-menu/src/game/: tiles.rs
app/src-wasm/app-player/: Cargo.toml
app/src-wasm/app-player/src/: lib.rs  movement.rs  physics.rs  setup.rs  stoop.rs  touch.rs  walk.rs
app/src-wasm/app-tile/: Cargo.toml
app/src-wasm/app-tile/src/: lib.rs  preview.rs
app/src-wasm/app/src/: app.rs  graphics.rs
app/src/assets/: Install.svelte
app/src/components/alert/: Alert.svelte
app/src/components/button/: Button.svelte
app/src/components/form/: Form.svelte  Input.svelte  index.ts
app/src/components/icon/: Icon.svelte
app/src/components/progress/: ProgressSpinner.svelte
app/src/modules/alert/: Alert.svelte
app/src/modules/asset/: AssetLoader.svelte  index.ts
app/src/modules/auth/: Login.svelte  Register.svelte  WalletSelector.svelte  index.ts
app/src/modules/button/: Button.svelte
app/src/modules/debug/: Debug.svelte  DebugRow.svelte  index.ts
app/src/modules/header/: Header.svelte
app/src/modules/icon/: Icon.svelte  Warning.svelte
app/src/modules/layout/: Body.svelte  Modal.svelte  modal.ts  screen-size.ts
app/src/modules/login/: Login.svelte
app/src/modules/progress/: ProgressSpinner.svelte
app/src/modules/webgl2/: NoWebGL2App.svelte  WebGL2FixHint.svelte  index.ts
app/src/static/: CNAME
common-types/: auth.ts
lib/: Cargo.toml
lib/src/: course.rs  lib.rs  theme.rs  tile.rs
src/: App.svelte  app.tsx  index.html  index.tsx  webgl2.tsx
src-wasm/: Cargo.toml  package.json
src-wasm/app/: Cargo.toml  package.json
src-wasm/app-assets/: Cargo.toml
src-wasm/app-assets/src/: lib.rs
src-wasm/app-character/: Cargo.toml
src-wasm/app-character/src/: ground.rs  lib.rs
src-wasm/app-config/: Cargo.toml
src-wasm/app-config/src/: colors.rs  lib.rs  z_index.rs
src-wasm/app-core/: Cargo.toml
src-wasm/app-core/src/: course.rs  course_sprites.rs  drag.rs  game_mode.rs  lib.rs  mode.rs  player_sprites.rs  tile.rs  utils.rs
src-wasm/app-core/src/course/: goal_pole.rs  object.rs  resource.rs  sprites.rs  theme.rs  tile.rs  ui_button.rs
src-wasm/app-course/: Cargo.toml
src-wasm/app-course/src/: grid.rs  lib.rs
src-wasm/app-debug/: Cargo.toml
src-wasm/app-debug/src/: lib.rs  plugin.rs
src-wasm/app-game/: Cargo.toml
src-wasm/app-game/src/: camera.rs  game_mode.rs  lib.rs
src-wasm/app-ground/: Cargo.toml
src-wasm/app-ground/src/: lib.rs
src-wasm/app-load/src/: lib.rs
src-wasm/app-menu/: Cargo.toml
src-wasm/app-menu/src/: game.rs  lib.rs
src-wasm/app-menu/src/game/: tiles.rs
src-wasm/app-player/: Cargo.toml
src-wasm/app-player/src/: camera.rs  debug.rs  game_mode.rs  ground.rs  jump.rs  kill.rs  lib.rs  movement.rs  physics.rs  setup.rs  state_change.rs  stoop.rs  touch.rs  walk.rs
src-wasm/app-tile/: Cargo.toml
src-wasm/app-tile/src/: lib.rs  preview.rs
src-wasm/app/src/: app.rs  character.rs  graphics.rs  ground.rs  lib.rs  rapier.rs
src-wasm/debug/: Cargo.toml
src-wasm/src/: lib.rs  plugins.rs  rapier.rs
src/modules/alert/: Alert.svelte  alert.tsx
src/modules/asset/: AssetLoader.svelte  asset-loader.tsx  index.ts
src/modules/assets/: asset-loader.tsx
src/modules/button/: button.tsx
src/modules/color/: index.tsx
src/modules/debug/: Debug.svelte  debug-row.tsx  debug.tsx  index.ts
src/modules/icon/: Warning.svelte  icon.tsx
src/modules/progress/: progress-spinner.tsx
src/modules/webgl2/: NoWebGL2App.svelte  fix-hint.tsx  index.ts
thunder-tests/: course.ron.br  thunderActivity.json  thunderCollection.json  thunderclient.json
