[workspace]
members = [
    "api/wasm",
    "app/src-wasm/*",
    "lib"
]
resolver = "2"

[profile]
[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = 'abort'

[profile.dev]
opt-level = 1

[profile.dev.package.'*']
codegen-units = 1
opt-level = 3

[profile.release-workers]
inherits = "release"
opt-level = "z"
