cargo-features = ["strip"]

[package]
name = "app"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = { version = "0.5", default-features = false }
bevy_webgl2 = "0.5"
console_error_panic_hook = "0.1"
rapier = { package = "bevy_rapier2d", version = "0.10", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2"
wee_alloc = "0.4"
