[package]
name = "app-assets"
version = "0.1.0"
edition = "2018"

[dependencies]
web-sys = "0.3"

[dependencies.bevy]
version = "0.5"
git = "https://github.com/bevyengine/bevy.git"
rev = "081350916c39fc1c7c9d659ccb6d86413832b465"
# branch = "main"
default-features = false

[dependencies.tar]
version = "0.4"
# path = "../../../tar-rs"
git = "https://github.com/Shroom-Kingdom/tar-rs.git"
