[package]
name = "app-config"
version = "0.1.0"
edition = "2021"

[dependencies.bevy]
version = "0.8"
# path = "../../bevy"
# git = "https://github.com/bevyengine/bevy.git"
# rev = "a89a954a1706bcffa497309388b993ff82016829"
# branch = "main"
default-features = false
features = ["bevy_winit", "png", "render"]

[dependencies.bevy_rapier]
package = "bevy_rapier2d"
version = "0.16"
# path = "../../../bevy_rapier/bevy_rapier2d"
# git = "https://github.com/Shroom-Kingdom/bevy_rapier.git"
