[package]
name = "app-course"
version = "0.1.0"
edition = "2021"

[dependencies]
app-config = { path = "../app-config" }
app-core = { path = "../app-core" }
app-tile = { path = "../app-tile" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [ "CanvasRenderingContext2d", "EventListener" ] }
winit = "0.26"

[dependencies.bevy]
version = "0.6"
# git = "https://github.com/bevyengine/bevy.git"
# rev = "a89a954a1706bcffa497309388b993ff82016829"
# branch = "main"
default-features = false

[dependencies.bevy_rapier]
package = "bevy_rapier2d"
version = "0.12.0-alpha.0"
# path = "../../../bevy_rapier/bevy_rapier2d"
# git = "https://github.com/Shroom-Kingdom/bevy_rapier.git"
