[package]
name = "app-debug"
version = "0.1.0"
edition = "2018"

[dependencies]
js-sys = "0.3"
rapier = { package = "rapier2d", version = "0.11" }
wasm-bindgen = "0.2"

[dependencies.bevy]
version = "0.5"
git = "https://github.com/bevyengine/bevy.git"
rev = "081350916c39fc1c7c9d659ccb6d86413832b465"
# branch = "main"
default-features = false
