[package]
name = "app-ground"
version = "0.1.0"
edition = "2018"

[dependencies]
app-config = { path = "../app-config" }

[dependencies.bevy]
version = "0.5"
git = "https://github.com/bevyengine/bevy.git"
rev = "081350916c39fc1c7c9d659ccb6d86413832b465"
# branch = "main"
default-features = false

[dependencies.bevy_rapier]
package = "bevy_rapier2d"
version = "0.11"
path = "../../../bevy_rapier/bevy_rapier2d"
# git = "https://github.com/Shroom-Kingdom/bevy_rapier.git"
