[package]
name = "app-player"
version = "0.1.0"
edition = "2018"

[dependencies]
app-config = { path = "../app-config" }
app-core = { path = "../app-core" }
app-ground = { path = "../app-ground" }
parry2d = "*"
web-sys = "0.3"

[dependencies.bevy]
version = "0.5"
git = "https://github.com/bevyengine/bevy.git"
rev = "081350916c39fc1c7c9d659ccb6d86413832b465"
# branch = "main"
default-features = false

[dependencies.bevy_rapier]
package = "bevy_rapier2d"
version = "0.11"
path = "../../../bevy_rapier/bevy_rapier2d"
# git = "https://github.com/Shroom-Kingdom/bevy_rapier.git"
