[package]
name = "app-player"
version = "0.1.0"
edition = "2021"

[dependencies]
app-config = { path = "../app-config" }
app-core = { path = "../app-core" }
app-course = { path = "../app-course" }
web-sys = "0.3"

[dependencies.bevy]
version = "0.7"
# git = "https://github.com/bevyengine/bevy.git"
# rev = "a89a954a1706bcffa497309388b993ff82016829"
# branch = "main"
default-features = false

[dependencies.bevy_rapier]
package = "bevy_rapier2d"
version = "0.15"
# path = "../../../bevy_rapier/bevy_rapier2d"
# git = "https://github.com/Shroom-Kingdom/bevy_rapier.git"
