cargo-features = ["strip"]

[package]
name = "app"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
app-assets = { path = "../app-assets" }
app-config = { path = "../app-config" }
app-core = { path = "../app-core" }
app-course = { path = "../app-course" }
app-debug = { path = "../app-debug" }
app-ground = { path = "../app-ground" }
app-player = { path = "../app-player" }
app-tile = { path = "../app-tile" }
js-sys = "0.3"
rapier = { package = "rapier2d", version = "0.11" }
wasm-bindgen = "0.2"
wee_alloc = "0.4"

[dependencies.bevy]
version = "0.5"
# path = "../../bevy"
git = "https://github.com/bevyengine/bevy.git"
rev = "a89a954a1706bcffa497309388b993ff82016829"
# branch = "main"
default-features = false

[dependencies.bevy_rapier]
package = "bevy_rapier2d"
version = "0.10"
# path = "../../../bevy_rapier/bevy_rapier2d"
git = "https://github.com/Shroom-Kingdom/bevy_rapier.git"

[dependencies.bevy_webgl2]
version = "0.5"
# path = "../../../bevy_webgl2"
git = "https://github.com/Shroom-Kingdom/bevy_webgl2.git"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'Window',
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
