[package]
name = "app-assets"
version = "0.1.0"
edition = "2021"

[dependencies]
web-sys = "0.3"

[dependencies.bevy]
version = "0.9"
features = ["png"]
# git = "https://github.com/bevyengine/bevy.git"
# rev = "a89a954a1706bcffa497309388b993ff82016829"
# branch = "main"
default-features = false

[dependencies.tar]
version = "0.4"
# path = "../../../tar-rs"
git = "https://github.com/Shroom-Kingdom/tar-rs.git"
