[package]
name = "app-load"
version = "0.1.0"
edition = "2021"

[dependencies]
app-config = { path = "../app-config" }
app-core = { path = "../app-core" }
js-sys = "0.3"
shrm-core = { path = "../../../lib" }
wasm-bindgen = "0.2"

[dependencies.bevy]
version = "0.9"
# git = "https://github.com/bevyengine/bevy.git"
# rev = "a89a954a1706bcffa497309388b993ff82016829"
# branch = "main"
default-features = false
